# thanos

./: .gitignore  architecture.md  docker-compose.yml  package.json  requirements.0506.txt  requirements.md  tasks.md
api-service/: Dockerfile  pyproject.toml
api-service/src/eddi_chatbot_api/: __init__.py  main.py  run.py
api-service/src/eddi_chatbot_api/models/: message.py
chatbot-api/: .coveragerc  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
chatbot-api/app/api/: routes.py
chatbot-api/app/connectors/: rasa_connector.py
chatbot-api/app/services/: chat_service.py
chatbot-api/tests/: conftest.py  test_api.py  test_chat_service.py  test_main.py  test_rasa_connector.py
chatbot-nlu/: .gitignore  Dockerfile  Dockerfile.actions  pyproject.toml
chatbot-nlu/rasa/: __init__.py  config.yml  domain.yml  endpoints.docker.yml  endpoints.yml
chatbot-nlu/rasa/actions/: __init__.py  actions.py  query_analyzer.py  recommend_database.py  restart.py  schema_explorer.py  submit_database.py  submit_delete_database.py
chatbot-nlu/rasa/data/: nlu.yml  rules.yml  stories.yml
chatbot-nlu/scripts/: start-server.sh
chatbot-nlu/test-reports/: results.xml
chatbot-nlu/tests/: test_actions.py
chatbot-web/: .nycrc.json  Dockerfile  index.html  jasmine.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.test.ts  tsconfig.test.json  vite.config.ts
chatbot-web-v2/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
chatbot-web-v2/src/: App.test.tsx  App.tsx  index.css  main.test.tsx  main.tsx  output.css  setupTests.ts
chatbot-web-v2/src/components/: Button.test.tsx  Button.tsx
chatbot-web-v2/src/lib/: api.test.ts  api.ts  coverage-utils.test.ts  coverage-utils.ts  utils.test.ts
chatbot-web/.nyc_output/: 28ed2f83-3df6-4ec2-b284-0bd24aa3bed1.json  c217acc9-3987-45c4-81a1-0b1ed75252c4.json
chatbot-web/conf/: nginx.conf
chatbot-web/src/: App.test.tsx  App.tsx  main.test.tsx  main.tsx
nlu-service/: .gitignore  README.md  config.yml  domain.yml  endpoints.yml  hello.py  pyproject.toml
nlu-service/actions/: actions.py
task-processor/: hello.py  pyproject.toml
(+135 files in other folders)
