[project]
name = "nlu-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.11,>=3.10"
dependencies = [
    "rasa>=3.6.21",
]



[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.12.0",
    "isort>=5.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"


[tool.hatch.build.targets.wheel]
packages = ["actions"]
